--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jasleen8801",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.0.1",
     "@notionhq/client": "^2.2.13",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
