--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@google-cloud/storage": "^7.0.1",
     "@notionhq/client": "^2.2.13",
     "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "localStorage": "^1.0.4",
     "mongoose": "^7.5.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
+    "prismjs": "^1.29.0",
+    "puppeteer": "^21.1.1",
+    "puppeteer-core": "^21.1.1",
+    "raw-body": "^2.5.2"
   }
 }
