--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.5.0",
     "nodemon": "^3.0.1",
     "prismjs": "^1.29.0",
-    "puppeteer": "^21.1.1"
+    "puppeteer": "^21.1.1",
+    "vscode": "^1.1.34"
   }
 }
