--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "just trying",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jasleen8801",
