--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jasleen8801",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.3.0",
     "@google-cloud/storage": "^7.0.1",
     "@notionhq/client": "^2.2.13",
     "@octokit/rest": "^20.0.1",
